# botsuro-api

./: .gitignore  Makefile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.sh
docker/: Dockerfile.prod
kubernetes/: config.yml  nginx.conf.yml
middleware/: identity.py
models/: completion.py  current_song.py  discogs.py  faves.py  memory.py  notes.py  pagination.py  sanity_blocks.py  song.py  weather.py
models/platform/: __init__.py
models/sanity/: album_menu.py
models/streams/: __init__.py
models/streams/events/: __init__.py  on_publish.py  on_subscribe.py  on_unpublish.py
prompts/: __init__.py  sanity_urls.py
queries/: __init__.py  album_menu.py  bot_personality.py  sanity_urls.py
repositories/: database_conn.py
repositories/ai/: __init__.py
repositories/cache/: __init__.py
repositories/emotes/: __init__.py
repositories/faves/: __init__.py
repositories/mem_cache/: __init__.py
repositories/memories/: __init__.py
repositories/notes/: __init__.py
repositories/sanity/: __init__.py
repositories/weather/: __init__.py
repositories/xiu_server/: __init__.py
scripts/: store_emotes.py
services/: AiChat.py  Cache.py  DataNormalizations.py  FaveSystem.py  Memory.py  NoteSystem.py  OpenWeather.py  SongHistory.py  SongIdProxy.py  __init__.py  botsuro_brains.py  discogs.py
services/brains/: __init__.py
services/menus/: __init__.py
services/streams/: __init__.py
services/weather/: __init__.py
templates/: song_id.html  text-base.html
